--- a/style.css
+++ b/style.css
@@ -5,10 +5,21 @@
 
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 
 .bg_especial_body{
-    background-image: url("Images/bg_spe.avif");
+    /* background-image: url("Images/bg_spe.avif"); */
+    background: rgb(187,201,213);
+    background: linear-gradient(0deg, rgba(187,201,213,1) 21%, rgba(167,188,252,1) 100%);
+    height: 100vh;
+
+    
 }
 
 
@@ -22,6 +33,7 @@
 /* background del slider */
 .bg_especial{
     background-color:#e7d6ce ;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .background_2 h1{
@@ -38,6 +50,7 @@
 
 /* esto afecta al texto del slider */
 .color_especial{
+    
     color:#f1eeec;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
  }
@@ -83,4 +96,8 @@
     font-size:3rem;
     color: #DE4A0C;
     font-family: 'Domine', serif;
+}
+
+.bs-esp{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
