--- a/style.css
+++ b/style.css
@@ -9,15 +9,18 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    height: 100vh;
+    background: rgb(225, 234, 243);
+    background: radial-gradient(circle, rgb(195, 196, 197) 2%, rgb(164, 169, 186) 90%);
 }
 
 
 
 .bg_especial_body{
-    /* background-image: url("Images/bg_spe.avif"); */
-    background: rgb(187,201,213);
-    background: linear-gradient(0deg, rgba(187,201,213,1) 21%, rgba(167,188,252,1) 100%);
-    height: 100vh;
+
+    /* background: rgb(187,201,213);
+    background: linear-gradient(0deg, rgba(187,201,213,1) 21%, rgb(16, 70, 235) 100%); */
+    
 
     
 }
@@ -32,7 +35,7 @@ body{
 
 /* background del slider */
 .bg_especial{
-    background-color:#e7d6ce ;
+    background-color:#d5c9c4 ;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
@@ -43,7 +46,10 @@ body{
 .color_especial2{
     font-size: 2rem;
     font-style: italic;
-    color: #f14e07;
+    color: #d8681e;
+    background-color: #a299992d;
+    background-color: blur(0.5px);
+    
     
 }
 
